// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Feedback should render 1`] = `
<div>
  <div
    class=" hidden-print dropdown"
  >
    <button
      aria-expanded="false"
      aria-haspopup="true"
      class="btn btn-light"
      type="button"
    >
      Give Feedback
    </button>
    <div
      aria-hidden="true"
      class="p-3 dropdown-menu dropdown-menu-right"
      role="menu"
      style="width: 400px;"
      tabindex="-1"
    >
      <div
        class="text-center"
      >
        <p>
          Tell us what you think about Payer Space.
        </p>
        <div
          class="btn-group"
          role="group"
        >
          <button
            class="btn btn-light"
            style="font-size: 1.4em; padding: .2em .4em;"
            type="button"
          >
            <span
              class="icon icon-smile"
            />
            <span
              class="sr-only"
            >
              Smiley face
            </span>
          </button>
          <button
            class="btn btn-light"
            style="font-size: 1.4em; padding: .2em .4em;"
            type="button"
          >
            <span
              class="icon icon-meh"
            />
            <span
              class="sr-only"
            >
              Meh face
            </span>
          </button>
          <button
            class="btn btn-light"
            style="font-size: 1.4em; padding: .2em .4em;"
            type="button"
          >
            <span
              class="icon icon-frown"
            />
            <span
              class="sr-only"
            >
              Frowny face
            </span>
          </button>
        </div>
        <div
          class="invalid-feedback"
        >
          Please select one of the faces above
        </div>
        <textarea
          aria-label="Please provide any feedback, requests, and/or defects."
          class="mt-3 form-control"
          placeholder="Feedback? Requests? Defects? (optional)"
        />
        <div
          class="mt-3 text-right"
        >
          <button
            class="btn btn-primary"
            type="button"
          >
            Send
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Feedback should render custom button color 1`] = `
<div>
  <div
    class=" hidden-print dropdown"
  >
    <button
      aria-expanded="false"
      aria-haspopup="true"
      class="btn btn-success"
      type="button"
    >
      Give Feedback
    </button>
    <div
      aria-hidden="true"
      class="p-3 dropdown-menu dropdown-menu-right"
      role="menu"
      style="width: 400px;"
      tabindex="-1"
    >
      <div
        class="text-center"
      >
        <p>
          Tell us what you think about Payer Space.
        </p>
        <div
          class="btn-group"
          role="group"
        >
          <button
            class="btn btn-light"
            style="font-size: 1.4em; padding: .2em .4em;"
            type="button"
          >
            <span
              class="icon icon-smile"
            />
            <span
              class="sr-only"
            >
              Smiley face
            </span>
          </button>
          <button
            class="btn btn-light"
            style="font-size: 1.4em; padding: .2em .4em;"
            type="button"
          >
            <span
              class="icon icon-meh"
            />
            <span
              class="sr-only"
            >
              Meh face
            </span>
          </button>
          <button
            class="btn btn-light"
            style="font-size: 1.4em; padding: .2em .4em;"
            type="button"
          >
            <span
              class="icon icon-frown"
            />
            <span
              class="sr-only"
            >
              Frowny face
            </span>
          </button>
        </div>
        <div
          class="invalid-feedback"
        >
          Please select one of the faces above
        </div>
        <textarea
          aria-label="Please provide any feedback, requests, and/or defects."
          class="mt-3 form-control"
          placeholder="Feedback? Requests? Defects? (optional)"
        />
        <div
          class="mt-3 text-right"
        >
          <button
            class="btn btn-primary"
            type="button"
          >
            Send
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Feedback should render custom button text 1`] = `
<div>
  <div
    class=" hidden-print dropdown"
  >
    <button
      aria-expanded="false"
      aria-haspopup="true"
      class="btn btn-light"
      type="button"
    >
      Provide Valuable Feedback
    </button>
    <div
      aria-hidden="true"
      class="p-3 dropdown-menu dropdown-menu-right"
      role="menu"
      style="width: 400px;"
      tabindex="-1"
    >
      <div
        class="text-center"
      >
        <p>
          Tell us what you think about Payer Space.
        </p>
        <div
          class="btn-group"
          role="group"
        >
          <button
            class="btn btn-light"
            style="font-size: 1.4em; padding: .2em .4em;"
            type="button"
          >
            <span
              class="icon icon-smile"
            />
            <span
              class="sr-only"
            >
              Smiley face
            </span>
          </button>
          <button
            class="btn btn-light"
            style="font-size: 1.4em; padding: .2em .4em;"
            type="button"
          >
            <span
              class="icon icon-meh"
            />
            <span
              class="sr-only"
            >
              Meh face
            </span>
          </button>
          <button
            class="btn btn-light"
            style="font-size: 1.4em; padding: .2em .4em;"
            type="button"
          >
            <span
              class="icon icon-frown"
            />
            <span
              class="sr-only"
            >
              Frowny face
            </span>
          </button>
        </div>
        <div
          class="invalid-feedback"
        >
          Please select one of the faces above
        </div>
        <textarea
          aria-label="Please provide any feedback, requests, and/or defects."
          class="mt-3 form-control"
          placeholder="Feedback? Requests? Defects? (optional)"
        />
        <div
          class="mt-3 text-right"
        >
          <button
            class="btn btn-primary"
            type="button"
          >
            Send
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Feedback should render custom className 1`] = `
<div>
  <div
    class="junk and-stuff hidden-print dropdown"
  >
    <button
      aria-expanded="false"
      aria-haspopup="true"
      class="btn btn-light"
      type="button"
    >
      Give Feedback
    </button>
    <div
      aria-hidden="true"
      class="p-3 dropdown-menu dropdown-menu-right"
      role="menu"
      style="width: 400px;"
      tabindex="-1"
    >
      <div
        class="text-center"
      >
        <p>
          Tell us what you think about Payer Space.
        </p>
        <div
          class="btn-group"
          role="group"
        >
          <button
            class="btn btn-light"
            style="font-size: 1.4em; padding: .2em .4em;"
            type="button"
          >
            <span
              class="icon icon-smile"
            />
            <span
              class="sr-only"
            >
              Smiley face
            </span>
          </button>
          <button
            class="btn btn-light"
            style="font-size: 1.4em; padding: .2em .4em;"
            type="button"
          >
            <span
              class="icon icon-meh"
            />
            <span
              class="sr-only"
            >
              Meh face
            </span>
          </button>
          <button
            class="btn btn-light"
            style="font-size: 1.4em; padding: .2em .4em;"
            type="button"
          >
            <span
              class="icon icon-frown"
            />
            <span
              class="sr-only"
            >
              Frowny face
            </span>
          </button>
        </div>
        <div
          class="invalid-feedback"
        >
          Please select one of the faces above
        </div>
        <textarea
          aria-label="Please provide any feedback, requests, and/or defects."
          class="mt-3 form-control"
          placeholder="Feedback? Requests? Defects? (optional)"
        />
        <div
          class="mt-3 text-right"
        >
          <button
            class="btn btn-primary"
            type="button"
          >
            Send
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Feedback should render custom form props 1`] = `
<div>
  <div
    class=" hidden-print dropdown"
  >
    <button
      aria-expanded="false"
      aria-haspopup="true"
      class="btn btn-light"
      type="button"
    >
      Give Feedback
    </button>
    <div
      aria-hidden="true"
      class="p-3 dropdown-menu dropdown-menu-right"
      role="menu"
      style="width: 400px;"
      tabindex="-1"
    >
      <div
        class="text-center"
      >
        <p>
          Tell us what you think about Payer Space.
        </p>
        <div
          class="btn-group"
          role="group"
        >
          <button
            class="btn btn-light"
            style="font-size: 1.4em; padding: .2em .4em;"
            type="button"
          >
            <span
              class="icon icon-smile"
            />
            <span
              class="sr-only"
            >
              Smiley face
            </span>
          </button>
          <button
            class="btn btn-light"
            style="font-size: 1.4em; padding: .2em .4em;"
            type="button"
          >
            <span
              class="icon icon-meh"
            />
            <span
              class="sr-only"
            >
              Meh face
            </span>
          </button>
          <button
            class="btn btn-light"
            style="font-size: 1.4em; padding: .2em .4em;"
            type="button"
          >
            <span
              class="icon icon-frown"
            />
            <span
              class="sr-only"
            >
              Frowny face
            </span>
          </button>
        </div>
        <div
          class="invalid-feedback"
        >
          Please select one of the faces above
        </div>
        <select
          class="custom-select"
          type="select"
        >
          <option
            value="payerSpace"
          >
            Payer Space
          </option>
          <option
            value="wholeSite"
          >
            Whole Site
          </option>
        </select>
        <textarea
          aria-label="Please provide any feedback, requests, and/or defects."
          class="mt-3 form-control"
          placeholder="Feedback? Requests? Defects? (optional)"
        />
        <div
          class="mt-3 text-right"
        >
          <button
            class="btn btn-primary"
            type="button"
          >
            Send
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Feedback should render custom prompt text 1`] = `
<div>
  <div
    class=" hidden-print dropdown"
  >
    <button
      aria-expanded="false"
      aria-haspopup="true"
      class="btn btn-light"
      type="button"
    >
      Give Feedback
    </button>
    <div
      aria-hidden="true"
      class="p-3 dropdown-menu dropdown-menu-right"
      role="menu"
      style="width: 400px;"
      tabindex="-1"
    >
      <div
        class="text-center"
      >
        <p>
          Provide same feedback
        </p>
        <div
          class="btn-group"
          role="group"
        >
          <button
            class="btn btn-light"
            style="font-size: 1.4em; padding: .2em .4em;"
            type="button"
          >
            <span
              class="icon icon-smile"
            />
            <span
              class="sr-only"
            >
              Smiley face
            </span>
          </button>
          <button
            class="btn btn-light"
            style="font-size: 1.4em; padding: .2em .4em;"
            type="button"
          >
            <span
              class="icon icon-meh"
            />
            <span
              class="sr-only"
            >
              Meh face
            </span>
          </button>
          <button
            class="btn btn-light"
            style="font-size: 1.4em; padding: .2em .4em;"
            type="button"
          >
            <span
              class="icon icon-frown"
            />
            <span
              class="sr-only"
            >
              Frowny face
            </span>
          </button>
        </div>
        <div
          class="invalid-feedback"
        >
          Please select one of the faces above
        </div>
        <textarea
          aria-label="Please provide any feedback, requests, and/or defects."
          class="mt-3 form-control"
          placeholder="Feedback? Requests? Defects? (optional)"
        />
        <div
          class="mt-3 text-right"
        >
          <button
            class="btn btn-primary"
            type="button"
          >
            Send
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
